tests/sawn/fixtures/invalid/03_multivalue_array_line.sawn
// INVALID: Multiple values on one line in [] array
scores[]
  1 2 3
